--- a/WeCare/covid19Data/templates/details.html
+++ b/WeCare/covid19Data/templates/details.html
@@ -1,74 +1,109 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>WeCare-coronavirus updates</title>
+        <title>Covid-19 Updates</title>
+        {% load static %}
+        <link rel="icon" href="{% static 'home/images/logo.png' %}" type="image/icon type">
+        <link rel="stylesheet" href="{% static 'covid19Data/css/details.css' %}">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     </head>
-    <body class="p-3">
-        <p class="display-4" style="text-align: center;">CoronaVirus Updates</p>
-        <br/>
-        <div class="container-fluid">
-            <!--Global Data-->
-            <div class="row">
-                <p class="h3">Global Summary</p>
+    <body style="background-image: url('{% static "logintosite/images/background.png" %}')";>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+              <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="/home">Home</a></li>
+                    <li class="active"><a href="#">Services</a></li>
+                    <li class="active"><a href="#">FAQ's</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="active"><a href="/registration/getregsdetails/">Register</a></li>
+                    <li class="active"><a href="/logintosite/login/">Sign In</a></li>
+                </ul>
+              </div>
             </div>
-            <div class="row">
-                <div class="card-deck">
-                    <div class="card" >
-                        <div class="card-header"> 
-                            <div class="card-title">New Confirmed</div>
-                        </div>
-                        <div class="card-body">
-                            <div class="card-text">{{result.NewConfirmed}}</div>
-                        </div>
-                    </div> 
-                    <div class="card" >
-                        <div class="card-header">
-                            <div class="card-title">Total Confirmed</div>
-                        </div>
-                        <div class="card-body">
-                            <div class="card-text">{{result.TotalConfirmed}}</div>
-                        </div>
+          </nav> 
+        <div class="container-fluid text-center">
+            <h3><b><u>Covid-19 Updates</u></b></h3>
+            <div class="row slideanim">
+              <div class="col-sm-4">
+                <div>
+                    <div class="box_head"> 
+                        New Confirmed
                     </div>
-                    <div class="card" >
-                        <div class="card-header">
-                            <div class="card-title">New Recovered</div>
-                        </div>
-                        <div class="card-body">
-                            <div class="card-text">{{result.NewRecovered}}</div>
-                        </div>
+                    <div class="box_body">
+                      {{result.NewConfirmed}}
                     </div>
-                    <div class="card" >
-                        <div class="card-header">
-                            <div class="card-title">Total Recovered</div>
-                        </div>
-                        <div class="card-body">
-                            <div class="card-text">{{result.TotalRecovered}}</div>
-                        </div>
+                </div> 
+              </div>
+
+              <div class="col-sm-4">
+                <div>
+                    <div class="box_head">
+                        Total Confirmed
                     </div>
-                    <div class="card" >
-                        <div class="card-header">
-                            <div class="card-title">New Deaths</div>
-                        </div>
-                        <div class="card-body">
-                            <div class="card-text">{{result.NewDeaths}}</div>
-                        </div>
-                    </div> 
-                    <div class="card" >
-                        <div class="card-header">
-                            <div class="card-title">Total Deaths</div>
-                        </div>
-                        <div class="card-body">
-                            <div class="card-text">{{result.TotalDeaths}}</div>
-                        </div>
-                    </div> 
+                    <div class="box_body">
+                        {{result.TotalConfirmed}}
+                    </div>
                 </div>
+              </div>
+              
+              <div class="col-sm-4">
+                <div>
+                    <div class="box_head">
+                        New Recovered
+                    </div>
+                    <div class="box_body">
+                        {{result.NewRecovered}}
+                    </div>
+                </div>
+              </div>
             </div>
+            <div class="row slideanim">
+              <div class="col-sm-4">
+                <div >
+                    <div class="box_head">
+                        Total Recovered
+                    </div>
+                    <div class="box_body">
+                      {{result.TotalRecovered}}
+                    </div>
+              </div>
+            </div>
+
+              <div class="col-sm-4 ">
+                <div >
+                    <div class="box_head">
+                        New Deaths
+                    </div>
+                    <div class="box_body">
+                       {{result.NewDeaths}}
+                    </div>
+                </div> 
+              </div>
+
+              <div class="col-sm-4">
+                <div>
+                    <div class="box_head">
+                        Total Deaths
+                    </div>
+                    <div class="box_body">
+                        {{result.TotalDeaths}}
+                    </div>
+                </div>
+              </div>
+            </div>
+            
             <!--Countrywise Data-->
-            <div class="row">
-                <h3 class="alert alert-light">Countrywise Data</h3>
-                <table class="table table-hover table-responsive">
+            <div class="container-fluid text-center">
+                <h3><b><u>Countrywise Data</u></b></h3><br>
+                <table class="table table-hover table-responsive table-stripped">
                     <tr>
                         <thead class="table-dark">
                             <th>Sno.</th>
@@ -96,8 +131,5 @@
                 </table>
             </div>
         </div>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     </body>
 </html>
