--- a/WeCare/covid19Data/templates/details.html
+++ b/WeCare/covid19Data/templates/details.html
@@ -3,6 +3,7 @@
     <head>
         <title>Covid-19 Updates</title>
         {% load static %}
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.css" type="text/css" rel="stylesheet">
         <link rel="icon" href="{% static 'home/images/logo.png' %}" type="image/icon type">
         <link rel="stylesheet" href="{% static 'covid19Data/css/details.css' %}">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,7 +14,7 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     </head>
-    <body style="background-image: url('{% static "logintosite/images/background.png" %}')";>
+    <body style="background-image: url('{% static 'logintosite/images/background.png' %}');">
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
               <div class="collapse navbar-collapse" id="myNavbar">
@@ -99,9 +100,58 @@
                 </div>
               </div>
             </div>
-            
+            <div id="container" style="width: 75%;">
+                <canvas id="pie-chart">
+                </canvas>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
+                <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script> -->
+                <!-- <script>
+        
+                    // var config = {
+                    // type: 'pie',
+                    // data: {
+                    //     datasets: [{
+                    //     data: {{data|safe}},
+                    //     backgroundColor: [
+                    //         '#696969', '#808080', '#A9A9A9', '#C0C0C0', '#D3D3D3'
+                    //     ],
+                    //     label: 'Updates'
+                    //     }],
+                    //     labels: {{labels|safe}}
+                    // },
+                    // options: {
+                    //     responsive: true
+                    // }
+                    // };
+                </script> -->
+                <script>
+                    window.onload = function() {
+                    var ctx = document.getElementById('pie-chart').getContext('2d');
+                    var myPie = new Chart(ctx,{
+                        type:'pie',
+                        data:{
+                            labels:{{labels|safe}},
+                            datasets:[{
+                                label:'updates',
+                                data:{{data|safe}},
+                                backgroundColor:[
+                                'rgba(255, 99, 132, 0.2)',
+                                'rgba(54, 162, 235, 0.2)',
+                                'rgba(255, 206, 86, 0.2)',
+                                'rgba(75, 192, 192, 0.2)',
+                                'rgba(153, 102, 255, 0.2)',
+                                'rgba(45,98,230,0.2)',
+                             ],
+                            }]
+                        },
+                        options:{
+                            responsive:true
+                        }
+                    });
+                    }
+                </script>
             <!--Countrywise Data-->
-            <div class="container-fluid text-center">
+            <!-- <div class="container-fluid text-center">
                 <h3><b><u>Countrywise Data</u></b></h3><br>
                 <table class="table table-hover table-responsive table-stripped">
                     <tr>
@@ -129,7 +179,7 @@
                     </tr>                
                 {% endfor %}
                 </table>
-            </div>
+            </div> -->
         </div>
     </body>
 </html>
